Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello CourseEra!</title>
 </head>
 <body>
-<h1>Hello CourseEra!</h1>
+<h1>Hello CourseEra! It's a great day to start learning Web Development.</h1>
 </body>
 </html>
